+Preview, +TitleAnimation, Fix format time